# asyncpg-opentracing

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.md  README.rst  requirements-test.txt  setup.cfg  tox.ini
asyncpg_opentracing/: __init__.py  tracing.py
tests/: test_connection.py
