[metadata]
name = asyncpg-opentracing
version = 0.1.0
author = Vasilii Novikov
author-email = novikov.vz@gmail.com
home-page = https://github.com/condorcet/asyncpg-opentracing
description = Opentracing instrumentation for asyncpg
long-description = file: README.md, CHANGELOG.md
license = MIT
license-file = LICENSE.md
platform = any
keywords = opentracing
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = asyncpg_opentracing
python_requires = >=3.6
install_requires =
    asyncpg >=0.17
    opentracing >2, <3

[bdist_wheel]
universal = true